--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "proyecto-petit-bocatto---luisina-lopez",
   "version": "1.0.0",
-  "description": "",
+  "description": "Sitio Web de la empresa de reposteria: Petit Bocatto",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/LuisinaLopezOjeda/ProyectoPetitBocatto/issues"
   },
-  "homepage": "https://github.com/LuisinaLopezOjeda/ProyectoPetitBocatto#readme"
+  "homepage": "https://github.com/LuisinaLopezOjeda/ProyectoPetitBocatto#readme",
+  "dependencies": {
+    "node-sass": "^7.0.1",
+    "nodemon": "^2.0.16",
+    "sass": "^1.51.0"
+  }
 }
