--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Sitio Web de la empresa de reposteria: Petit Bocatto",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sass": "sass --watch scss/style.scss css/style.css"
   },
   "repository": {
     "type": "git",
